alignment issue resolved

--- a/src/components/loginForm/styles.css
+++ b/src/components/loginForm/styles.css
@@ -90,7 +90,7 @@
   @media only screen and (max-width: 800px) {
     .form-container{
         width: 80%;
-        left: 10%;
+        left: 14%;
     }
 
   }
